[datetime]: refactored handlers and added support to read datetime cell values